Remove underline from right-nav

--- a/src/navbar.scss
+++ b/src/navbar.scss
@@ -271,9 +271,9 @@ nav {
               margin-right: 10px;
               text-align: center;
               position: relative;
-              .active {
-                  border-bottom: 2px solid #808080;
-              }
+              // .active {
+              //     border-bottom: 2px solid #808080;
+              // }
               &:hover {
                   .nav-title {
                       opacity: 0.7;
